tests/snapshots/trace_solver@17866092833099573719.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: false
    inherited_ref_on_ref: EatInner
    fallback_to_outer: "No"
    allow_ref_pat_on_ref_mut: false
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: false
    ref_binding_on_inherited: ResetBindingMode
    mut_binding_on_inherited: Error
  bundle_name: ~
  request: "[&mut x]: &[&mut T]"
---
let [&mut x]: &[&mut T] = s
// Applying rule `ConstructorRef`
let &mut x: &&mut T = &(*s).0
// Type error for `let &mut x: &&mut T = &(*s).0`: MutabilityMismatch
